# SerenityCore

./: .gitignore  CMakeLists.txt  README.md  RevisionData.hpp.in.cmake  dummy.cpp
.github/workflows/: cmake.yml
CMake/: GenRevision.cmake  Options.cmake  ShowOptions.cmake
CMake/Compiler/CLang/: Settings.cmake
CMake/Compiler/GCC/: Settings.cmake
CMake/Compiler/ICC/: Settings.cmake
CMake/Macros/: AutoCollect.cmake  CheckPlatform.cmake  CollectIncludeDirectories.cmake  CollectSourceFiles.cmake  ConfigureBaseTarget.cmake  FindGit.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  GroupSources.cmake
CMake/Platform/Unix/: Settings.cmake
Dependencies/: CMakeLists.txt
Dependencies/CascLib/: CMakeLists.txt
Dependencies/SFMT/: CMakeLists.txt
Dependencies/boost/: CMakeLists.txt
Dependencies/bzip2/: CMakeLists.txt
Dependencies/efsw/: CMakeLists.txt
Dependencies/fmt/: CMakeLists.txt
Dependencies/g3dlite/: CMakeLists.txt
Dependencies/gsoap/: CMakeLists.txt
Dependencies/jemalloc/: CMakeLists.txt  jemalloc_defs.h
Dependencies/jemalloc/include/jemalloc/internal/: jemalloc_internal.h
Dependencies/mysql/: CMakeLists.txt
Dependencies/openssl/: CMakeLists.txt
Dependencies/process/: CMakeLists.txt
Dependencies/protobuf/: CMakeLists.txt
Dependencies/rapidjson/: CMakeLists.txt
Dependencies/readline/: CMakeLists.txt
Dependencies/recastnavigation/: CMakeLists.txt
Dependencies/recastnavigation/Detour/: CMakeLists.txt
Dependencies/recastnavigation/Recast/: CMakeLists.txt
Dependencies/threads/: CMakeLists.txt
Dependencies/utf8cpp/: CMakeLists.txt
Dependencies/valgrind/: CMakeLists.txt
Dependencies/zlib/: CMakeLists.txt
Source/: CMakeLists.txt
Source/Framework/: CMakeLists.txt  CompilerDefines.hpp  Defines.hpp  Framework.cpp  Framework.hpp  GitRevision.cpp  GitRevision.hpp  SCLogo.cpp  SCLogo.hpp
Source/Framework/Asio/: AsioHackForwarder.hpp  DeadlineTimer.hpp  IOContext.hpp  IPAddress.hpp  IPNetwork.hpp  Resolver.hpp  Strand.hpp
Source/Framework/Configuration/: BuiltInConfiguration.cpp  BuiltInConfiguration.hpp  Configuration.cpp  Configuration.hpp
Source/Framework/Debugging/: Errors.cpp  Errors.hpp
Source/Framework/IPLocation/: IPLocation.cpp  IPLocation.hpp
Source/Framework/Logging/: Appender.cpp  Appender.hpp  AppenderConsole.cpp  AppenderConsole.hpp  AppenderFile.cpp  AppenderFile.hpp  Log.cpp  Log.hpp  LogCommand.cpp  LogCommand.hpp  LogCommon.cpp  LogCommon.hpp  LogMessage.cpp  LogMessage.hpp  LogOperation.cpp  LogOperation.hpp  Logger.cpp  Logger.hpp
Source/Framework/PrecompiledHeaders/: FrameworkPCH.hpp
Source/Framework/Threading/: LockedQueue.hpp  MPSCQueue.hpp  ProcessPriority.cpp  ProcessPriority.hpp  ProducerConsumerQueue.hpp
Source/Framework/Utilities/: AsyncCallbackProcessor.hpp  ByteConverter.hpp  Containers.hpp  Durations.hpp  EnumFlag.hpp  Hash.hpp  IteratorPair.hpp  MessageBuffer.hpp  Optional.hpp  OptionalForwarder.hpp  Random.cpp  Random.hpp  Regex.hpp  StartProcess.cpp  StartProcess.hpp  StringFormat.hpp  TaskScheduler.cpp  TaskScheduler.hpp  Timer.hpp  Utils.cpp  Utils.hpp  advstd.hpp
Source/GenRevision/: CMakeLists.txt
Source/Server/: CMakeLists.txt
Source/Server/Authserver/: Authserver.cpp  CMakeLists.txt
Source/Server/Authserver/PrecompiledHeaders/: AuthserverPCH.hpp
Source/Server/Database/: CMakeLists.txt
Source/Server/Database/Database/: AdhocStatement.cpp  AdhocStatement.hpp  DatabaseEnviroment.cpp  DatabaseEnviroment.hpp  DatabaseEnviromentForwarder.hpp  DatabaseLoader.cpp  DatabaseLoader.hpp  DatabaseWorker.cpp  DatabaseWorker.hpp  DatabaseWorkerPool.cpp  DatabaseWorkerPool.hpp  Field.cpp  Field.hpp  MySQLConnection.cpp  MySQLConnection.hpp  MySQLHacks.hpp  MySQLPreparedStatement.cpp  MySQLPreparedStatement.hpp  MySQLThreading.cpp  MySQLThreading.hpp  MySQLWorkaround.hpp  PreparedStatement.cpp  PreparedStatement.hpp  QueryCallback.cpp  QueryCallback.hpp  QueryHolder.cpp  QueryHolder.hpp  QueryResult.cpp  QueryResult.hpp  SQLOperation.hpp  Transaction.cpp  Transaction.hpp
Source/Server/Database/Database/Implementation/: CharacterDatabase.cpp  CharacterDatabase.hpp  HotfixDatabase.cpp  HotfixDatabase.hpp  LoginDatabase.cpp  LoginDatabase.hpp  WorldDatabase.cpp  WorldDatabase.hpp
Source/Server/Database/PrecompiledHeaders/: DatabasePCH.hpp
Source/Server/Shared/: CMakeLists.txt
Source/Server/Shared/Networking/: AsyncAcceptor.hpp  NetworkThread.hpp  SSLSocket.hpp  Socket.hpp  SocketManager.hpp
Source/Server/Shared/Packets/: ByteBuffer.cpp  ByteBuffer.hpp
Source/Server/Shared/PrecompiledHeaders/: SharedPCH.hpp
Source/Server/Worldserver/: CMakeLists.txt  Worldserver.cpp
Source/Server/Worldserver/PrecompiledHeaders/: WorldserverPCH.hpp
